objects/Coupon__c.object
<CustomObject>
    <description>Coupons that can be selected for redemption by the Community User</description>
    <fields>
        <fullName>Coupon_Value__c</fullName>
        <description>Value of the Coupon</description>
        <label>Coupon Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_Long__c</fullName>
        <description>Long Description of the Coupon</description>
        <label>Description (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Coupon</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date of the Coupon</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postmark_Date__c</fullName>
        <description>Postmark Date of the Coupon - Coupon should NOT display in the Community after this date</description>
        <label>Postmark Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Expiration_Date__c</fullName>
        <description>Previous Expiration Date of the Coupon</description>
        <inlineHelpText>Previous Expiration Date of the Coupon</inlineHelpText>
        <label>Previous Expiration Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Coupon</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Coupon_Value__c</columns>
        <columns>Description__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Postmark_Date__c</columns>
        <columns>Previous_Expiration_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coupon Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <recordTypes>
        <fullName>PMI</fullName>
        <active>true</active>
        <description>PMI Coupons</description>
        <label>PMI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purina</fullName>
        <active>true</active>
        <description>Purina Coupons</description>
        <label>Purina</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>